Fix contrast error

--- a/index.css
+++ b/index.css
@@ -47,6 +47,7 @@ h1{
 
 header div{
     display: flex;
+    align-items: center;
 }
 
 header ul{
@@ -64,6 +65,8 @@ header li + li{
 header a{
     color: white;
     text-decoration: none;
+    font-size: 20px;
+    font-weight: bold;
 }
 
 header li + li::before{
